@@ -1,58 +1,0 @@
-########################## Metricbeat Configuration ###########################
-
-# This file is a full configuration example documenting all non-deprecated
-# options in comments. For a shorter configuration example, that contains only
-# the most common options, please see metricbeat.short.yml in the same directory.
-#
-# You can find the full configuration reference here:
-# https://www.elastic.co/guide/en/beats/metricbeat/index.html
-
-#==========================  Modules configuration ============================
-metricbeat.modules:
-
-#---------------------------- Apache Status Module ---------------------------
-- module: apache
-  metricsets: ["status"]
-  enabled: true
-  period: 1s
-
-  # Apache hosts
-  hosts: ["http://127.0.0.1/"]
-
-#---------------------------- MySQL Status Module ----------------------------
-- module: mysql
-  metricsets: ["status"]
-  enabled: true
-  period: 2s
-
-  # Host DSN should be defined as "tcp(127.0.0.1:3306)/"
-  # The username and password can either be set in the DSN or for all hosts in username and password config option
-  hosts: ["root@tcp(127.0.0.1:3306)/"]
-
-#---------------------------- Nginx Status Module ----------------------------
-- module: nginx
-  metricsets: ["stubstatus"]
-  enabled: true
-  period: 1s
-
-  # Nginx hosts
-  hosts: ["http://127.0.0.1/"]
-
-
-#---------------------------- Redis Status Module ----------------------------
-- module: redis
-  metricsets: ["info"]
-  enabled: true
-  period: 1s
-
-  # Redis hosts
-  hosts: ["127.0.0.1:6379"]
-
-#---------------------------- System Status Module ---------------------------
-- module: system
-  metricsets: ["cpu", "cores", "filesystem", "fsstats", "memory", "process"]
-  enabled: true
-  period: 2s
-  processes: ['.*']
-
-
