@@ -32,6 +32,10 @@ https://github.com/elastic/beats/compare/v5.0.0...5.0[Check the HEAD diff]
 *Metricbeat*
 
 - Fix `system.process.start_time` on Windows. {pull}2848[2848]
+- Fix `system.process.ppid` on Windows. {issue}2860[2860]
+- Fix system process metricset for Windows XP and 2003. `cmdline` will be unavailable. {issue}1704[1704]
+- Fix access denied issues in system process metricset by enabling SeDebugPrivilege on Windows. {issue}1897[1897]
+- Fix system diskio metricset for Windows XP and 2003. {issue}2885[2885]
 
 *Packetbeat*
 
@@ -49,6 +53,11 @@ https://github.com/elastic/beats/compare/v5.0.0...5.0[Check the HEAD diff]
 *Metricbeat*
 
 - Add username and password config options to the PostgreSQL module. {pull}2889[2890]
+- Add experimental filebeat metricset in the beats module. {pull}2297[2297]
+- Add experimental libbeat metricset in the beats module. {pull}2339[2339]
+- Add experimental docker module. Provided by Ingensi and @douaejeouit based on dockbeat.
+- Add username and password config options to the MongoDB module. {pull}2889[2889]
+- Add system core metricset for Windows. {pull}2883}[2883]
 
 *Packetbeat*
 
